--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,9 @@ aside {float:right;}
 
 .post {
     text-align: left;
-    border-bottom: 1px solid black;
+   /* border-bottom: 1px solid black; */
     display: block;
+    padding-bottom: 10px;
 }
 
 .home-image img{
@@ -87,6 +88,14 @@ padding-right: 10px;
 	float: right;
 }
 
+
+.Teron  {
+    text-align: center;
+}
+
+.name  {
+    text-decoration: underline;
+}
 
 
 /*	****************************************
